--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ mypy = "^0.910"
 black = {version = "^21.6b0", allow-prereleases = true}
 isort = {extras = ["pyproject"], version = "^5.9.1"}
 flake8 = "^3.9.2"
+pytest = "^6.2.4"
+pytest-cov = "^2.12.1"
 
 [tool.isort]
 profile = "black"
