--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,8 @@ license = "Apache 2.0"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+tensorflow = "^2.5.0"
+keras = "^2.4.3"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
