--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ isort = {extras = ["pyproject"], version = "^5.9.1"}
 flake8 = "^3.9.2"
 pytest = "^6.2.4"
 pytest-cov = "^2.12.1"
+pytest-mock = "^3.6.1"
 
 [tool.isort]
 profile = "black"
