--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ license = "Apache 2.0"
 
 [tool.poetry.dependencies]
 python = "^3.7"
-tensorflow = "^2.5.0"
+tensorflow = "2.4.0"
 keras = "^2.4.3"
+pandas = "*"
+scikit-learn = "^0.24.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
