--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,9 @@ pytest-mock = "^3.6.1"
 [tool.isort]
 profile = "black"
 
+[tool.mypy]
+ignore_missing_imports = true
+
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
