:sparkles: Perform EDA (Exploratory Data Analysis)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pandas = "*"
 scikit-learn = "*"
 Pillow = "*"
 PyYAML = "*"
+jupyter = "*"
+matplotlib = "*"
 
 [tool.poetry.dev-dependencies]
 mypy = "*"
